<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightWhite"
    android:orientation="vertical">


    <!--<LinearLayout
        android:id="@+id/llContainer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_5"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/aTAssetId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:background="@android:color/transparent"
            android:completionThreshold="1"
            android:ellipsize="end"
            android:hint="@string/enter_assetid"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding_2"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text=""
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/lightgray" />
    </LinearLayout>-->

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_2"
        card_view:cardElevation="@dimen/margin_2"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/aTAstId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:completionThreshold="1"
                android:ellipsize="end"
                android:hint="@string/enter_assetid"
                android:imeOptions="actionNext"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text=""
                android:inputType="number"
                android:padding="14dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorLight"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_2"
        card_view:cardElevation="@dimen/margin_2"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/aTAstDsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:completionThreshold="1"
                android:ellipsize="end"
                android:hint="@string/enter_assetdesc"
                android:imeOptions="actionNext"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text=""
                android:padding="14dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorLight"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_2"
        card_view:cardElevation="@dimen/margin_2"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etAssetNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/astno"
                android:inputType="text"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true"
                android:clickable="false"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorLight"
                android:textSize="16sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_2"
        card_view:cardElevation="@dimen/margin_2"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_loc"
                android:inputType="text"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorLight"
                android:textSize="16sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:visibility="gone"
        android:gravity="center">

        <Button
            android:id="@+id/btStart"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="inventoryStartOrStop"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:background="@drawable/button_style"
            />
        <Button
            android:id="@+id/btWrite"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"
            android:background="@drawable/button_style"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btAsgn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/asign"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:background="@drawable/button_style_save"
            />

        <Button
            android:id="@+id/btClose"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"
            android:background="@drawable/button_style_close"
            />
    </LinearLayout>
</LinearLayout>

